# example-rust

./: .gitignore  README.md
actix_web/: Cargo.toml  README.md
actix_web/docs/: ch02-01-errors.md  ch02-02-url-dispatch.md
actix_web/src/: api.rs  config.rs  main.rs
actix_web/src/routes/: mod.rs  url_dispatch.rs
actor-ping/: README.md
actor-ping/src/: main.rs
bevy/projects/my_bevy_game/src/: main.rs
sea_orm/: Cargo.toml
sea_orm/bakery-backend/: Cargo.toml  docker-compose.yml
sea_orm/bakery-backend/src/: main.rs
sea_orm/docs/tutorials/: ch01-02-migration.md
sea_orm/projects/bakery-backend/: docker-compose.yml
