[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.0", features = ["openssl"] }
openssl = "0.10.45"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.25.0"
