[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.0", features = ["openssl"] }
futures = "0.3.26"
openssl = "0.10.45"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = "1.25.0"
