[package]
name = "bakery-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sea-orm]
 version = "0.11.3"
features = [
	"sqlx-postgres",
	"runtime-async-std-native-tls",
	"macros"
]
